reorganize the project

--- a/countries/belgium/index.html
+++ b/countries/belgium/index.html
@@ -1,3 +1,5 @@
+<!--BELGIUM FLAG-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +16,7 @@
 
     <div id="titulo">
         <h1>
-            Portugal
+            Belgium
         </h1>
     </div>
 
