--- a/countries/belgium/index.html
+++ b/countries/belgium/index.html
@@ -1,5 +1,6 @@
 <!--BELGIUM FLAG-->
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,35 +21,16 @@
         </h1>
     </div>
 
-
-    <div id="red">
-        <div id="green">
-           
+    <div class="wrapper">
+        <div class="flag">
+            <div class="black">
+                <div class="yellow">
+                    <div class="red"></div>
+                </div>
+            </div>
         </div>
     </div>
-
- <div id="yellow"></div>
 
 </body>
 
 </html>
-
-
-
-<!-- 
-<body>
-
-
-
-
-    <div class="greenBox">
-        <div class="brownBox">
-            <span class="content"> content </span>
-        </div>
-    </div>
-
-
-
-</body>
-
-</html> -->
