--- a/countries/germany/index.html
+++ b/countries/germany/index.html
@@ -1,4 +1,4 @@
-<!--ENGLAND FLAG-->
+<!--GERMANY FLAG-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,16 +16,15 @@
 
     <div id="titulo">
         <h1>
-            England
+            Germany
         </h1>
     </div>
 
     <div class="wrapper">
         <div class="flag">
-            <div class="white">
-                <div class="crossred1"></div>
-                <div class="crossred2"></div>
-            </div>
+            <div class="black"></div>
+            <div class="red"></div>
+            <div class="yellow"></div>
         </div>
     </div>
 
