added czech republic and some simple ones

--- a/countries/ireland/index.html
+++ b/countries/ireland/index.html
@@ -1,4 +1,5 @@
-<!--CZECH REPUBLIC FLAG-->
+<!--IRELAND FLAG-->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,15 +17,17 @@
 
     <div id="titulo">
         <h1>
-            Czech Republic
+            Ireland
         </h1>
     </div>
 
     <div class="wrapper">
         <div class="flag">
-            <div class="white"></div>
-            <div class="red"></div>
-            <div class="white overlay"></div>
+            <div class="green">
+                <div class="white">
+                    <div class="orange"></div>
+                </div>
+            </div>
         </div>
     </div>
 
