--- a/countries/bulgaria/index.html
+++ b/countries/bulgaria/index.html
@@ -1,4 +1,4 @@
-<!--CZECH REPUBLIC FLAG-->
+<!--BULGARIA FLAG-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,15 +16,15 @@
 
     <div id="titulo">
         <h1>
-            Czech Republic
+            Bulgaria
         </h1>
     </div>
 
     <div class="wrapper">
         <div class="flag">
             <div class="white"></div>
+            <div class="green"></div>
             <div class="red"></div>
-            <div class="white overlay"></div>
         </div>
     </div>
 
