--- a/countries/estonia/index.html
+++ b/countries/estonia/index.html
@@ -1,4 +1,4 @@
-<!--CZECH REPUBLIC FLAG-->
+<!--ESTONIA FLAG-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Flags with CSS</title>
+    <title>Estonia</title>
 
 </head>
 
@@ -16,15 +16,15 @@
 
     <div id="titulo">
         <h1>
-            Czech Republic
+            Estonia
         </h1>
     </div>
 
     <div class="wrapper">
         <div class="flag">
+            <div class="blue"></div>
+            <div class="black"></div>
             <div class="white"></div>
-            <div class="red"></div>
-            <div class="white overlay"></div>
         </div>
     </div>
 
