--- a/countries/italy/index.html
+++ b/countries/italy/index.html
@@ -1,4 +1,5 @@
-<!--PORTUGAL FLAG-->
+<!--ITALY FLAG-->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Flags with CSS</title>
+    <title>Italy</title>
 
 </head>
 
@@ -16,39 +17,20 @@
 
     <div id="titulo">
         <h1>
-            Portugal
+            Italy
         </h1>
     </div>
 
-
-    <div id="red">
-        <div id="green">
-           
+    <div class="wrapper">
+        <div class="flag">
+            <div class="green">
+                <div class="white">
+                    <div class="red"></div>
+                </div>
+            </div>
         </div>
     </div>
-
- <div id="yellow"></div>
 
 </body>
 
 </html>
-
-
-
-<!-- 
-<body>
-
-
-
-
-    <div class="greenBox">
-        <div class="brownBox">
-            <span class="content"> content </span>
-        </div>
-    </div>
-
-
-
-</body>
-
-</html> -->
