--- a/countries/ukraine/index.html
+++ b/countries/ukraine/index.html
@@ -1,4 +1,4 @@
-<!--POLAND FLAG-->
+<!--UKRAINE FLAG-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Poland</title>
+    <title>ukraine</title>
 
 </head>
 
@@ -16,14 +16,14 @@
 
     <div id="titulo">
         <h1>
-            Poland
+            Ukraine
         </h1>
     </div>
 
     <div class="wrapper">
         <div class="flag">
-            <div class="white"></div>
-            <div class="red"></div>
+            <div class="blue"></div>
+            <div class="yellow"></div>
         </div>
     </div>
 
