--- a/countries/azerbaijan/index.html
+++ b/countries/azerbaijan/index.html
@@ -23,10 +23,13 @@
     <div class="wrapper">
         <div class="flag">
             <div class="blue"></div>
-            <div class="red"></div>
+            <div class="red"><div class="moon"></div></div>
             <div class="green"></div>
+            
         </div>
     </div>
+
+
 
 </body>
 
